update examples/FinanceBench/rag-ground-truths.yml > capex

--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -10,7 +10,7 @@ defs:
 
   CF: Cash Flow(s) Statement
 
-  capex: Capital Expenditure, a.k.a. CapEx
+  capex: Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending
 
 
   P&L: >-
