--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -661,7 +661,7 @@ fcf:
 
     `Free Cash Flow, a.k.a. FCF` = (
       `Cash Flows from Operations, a.k.a. Operating Cash Flows` -
-      `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+      `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
     )
 
   sub-plans:
@@ -671,7 +671,7 @@ fcf:
     - task: |-
         What are values in dollars of:
         - `Cash Flows from Operations, a.k.a. Operating Cash Flows`; and
-        - `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+        - `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
         (or most similar-meaning reported line items to those)
         on one same `Cash Flow(s) Statement` of {COMPANY} for {PERIOD} fiscal period?
 
@@ -687,7 +687,7 @@ fcf-conv-comp:
 
         `Free Cash Flow Conversion Ratio` = (
           (`Cash Flows from Operations, a.k.a. Operating Cash Flows` -
-           `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`)
+           `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`)
           / `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`
         )
 
@@ -702,7 +702,7 @@ fcf-conv-comp:
         - task: |-
             What are values in dollars of:
             - `Cash Flows from Operations, a.k.a. Operating Cash Flows`; and
-            - `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+            - `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
             (or most similar-meaning reported line items to those)
 
             on one same `Cash Flow(s) Statement` of {COMPANY}
@@ -907,7 +907,7 @@ debt-comp:
 capex-as-pct-of-rev-3y-avg:
   task: >-
     Calculate 3-year average of
-    `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+    `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
     as proportion of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
     for {COMPANY} as percentage value
 
@@ -915,7 +915,7 @@ capex-as-pct-of-rev-3y-avg:
     # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
     - task: >-
         What are values in dollars of
-        `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+        `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
         (or most similar-meaning reported line item)
         on `Cash Flow(s) Statement` of {COMPANY} for past 3 fiscal years?
 
@@ -931,8 +931,8 @@ capex-as-pct-of-rev-3y-avg:
         of {COMPANY} for past 3 fiscal years?
 
     - task: >-
-        Calculate 3-year average of Capital Expenditure (CapEx) as percentage of Revenue
-        by dividing sum of `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+        Calculate 3-year average of Capital Expenditure(s) (CapEx) as percentage of Revenue
+        by dividing sum of `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
         by sum of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
         and return division result as percentage value
 
@@ -997,7 +997,7 @@ cap-intens:
 
     - task: >-
         What is value in dollars of
-        `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+        `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
         (or most similar-meaning reported line item)
         on `Cash Flow(s) Statement` of {COMPANY} for {PERIOD} fiscal period?
 
@@ -1025,7 +1025,7 @@ cap-intens:
         - high `Total Assets` relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
           e.g., over 2 times;
 
-        - high `Capital Expenditure, a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure/Purchase(s)/Spending`
+        - high `Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending`
           relative to `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
           e.g., over 10%;
 
