--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -16,6 +16,8 @@ defs:
 
   CF: Cash Flow(s) Statement
 
+  op-cf: (Net) Cash Flows from Operations, a.k.a. (Net) Operating Cash Flows
+
   capex: Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending
 
 
@@ -97,6 +99,19 @@ ground-truths:
         2019: 6,489 million
         2018: 7,500 million  # unreliable
         2017: 7,017 million  # unreliable
+
+
+  ADOBE_2015_10K:
+    BS:
+      curr-liabs:
+        2015: 2,213,556 or 2,213.6 million or 2.2 billion
+        2014: 2,494,435 or 2,494.4 million or 2.5 billion
+
+    CF:
+      op-cf:
+        2015: 1,469,502 or 1,469.5 million or 1.5 billion
+        2014: 1,287,482 or 1,287.5 million or 1.3 billion
+        2013: 1,151,686 or 1,151.6 million or 1.2 billion
 
 
   PAYPAL_2022_10K:
