--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -114,6 +114,19 @@ ground-truths:
         2013: 1,151,686 or 1,151.6 million or 1.2 billion
 
 
+  ADOBE_2017_10K:
+    BS:
+      curr-liabs:
+        2017: 6,075,687 or 6,075.7 million or 6.0 billion
+        2016: 5,272,411 or 5,272.4 million or 5.3 billion
+
+    CF:
+      op-cf:
+        2017: 2,912,853 or 2,912.9 million or 2.9 billion
+        2016: 2,199,728 or 2,199.7 million or 2.2 billion
+        2013: 1,469,502 or 1,469.5 million or 1.5 billion
+
+
   PAYPAL_2022_10K:
     BS:
       curr-assets:
