--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -16,7 +16,7 @@ defs:
 
   CF: Cash Flow(s) Statement
 
-  op-cf: (Net) Cash Flows from Operations, a.k.a. (Net) Operating Cash Flows
+  op: (Net) Cash Flows from Operations, a.k.a. (Net) Operating Cash Flows
 
   capex: Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending
 
@@ -26,6 +26,7 @@ defs:
     or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement
 
   rev: (Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales
+  op: (Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))
   net: Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)
 
 
@@ -108,7 +109,7 @@ ground-truths:
         2014: 2,494,435 or 2,494.4 million or 2.5 billion
 
     CF:
-      op-cf:
+      op:
         2015: 1,469,502 or 1,469.5 million or 1.5 billion
         2014: 1,287,482 or 1,287.5 million or 1.3 billion
         2013: 1,151,686 or 1,151.6 million or 1.2 billion
@@ -121,10 +122,39 @@ ground-truths:
         2016: 5,272,411 or 5,272.4 million or 5.3 billion  # unreliable
 
     CF:
-      op-cf:
+      op:
         2017: 2,912,853 or 2,912.9 million or 2.9 billion  # unreliable
         2016: 2,199,728 or 2,199.7 million or 2.2 billion  # unreliable
         2013: 1,469,502 or 1,469.5 million or 1.5 billion  # unreliable
+
+
+  ADOBE_2022_10K:
+    CF:
+      op:
+        2022: 7,838 million
+        2021: 7,230 million
+        2020: 5,727 million
+
+      capex:
+        2022: 442 million
+        2021: 348 million
+        2020: 419 million
+
+    P&L:
+      rev:
+        2022: 17,606 million
+        2021: 15,785 million
+        2020: 12,868 million
+
+      op:
+        2022: 6,098 million
+        2021: 5,802 million
+        2020: 4,237 million
+
+      net:
+        2022: 4,756 million
+        2021: 4,822 million
+        2020: 5,260 million
 
 
   PAYPAL_2022_10K:
