--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -131,14 +131,14 @@ ground-truths:
   ADOBE_2022_10K:
     CF:
       op:
-        2022: 7,838 million
-        2021: 7,230 million
-        2020: 5,727 million
+        2022: 7,838 million  # unreliable
+        2021: 7,230 million  # unreliable
+        2020: 5,727 million  # unreliable
 
       capex:
-        2022: 442 million
-        2021: 348 million
-        2020: 419 million
+        2022: 442 million  # unreliable
+        2021: 348 million  # unreliable
+        2020: 419 million  # unreliable
 
     P&L:
       rev:
