--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -16,7 +16,7 @@ defs:
 
   CF: Cash Flow(s) Statement
 
-  op: (Net) Cash Flows from Operations, a.k.a. (Net) Operating Cash Flows
+  op-cf: (Net) Cash Flows from Operations, a.k.a. (Net) Operating Cash Flows
 
   capex: Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending
 
@@ -26,6 +26,7 @@ defs:
     or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement
 
   rev: (Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales
+  cogs: (Total) Cost of Goods Sold, a.k.a. (Total) COGS, or (Total) Cost of Sales, or (Total) Cost of Revenue
   op: (Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))
   net: Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)
 
@@ -109,7 +110,7 @@ ground-truths:
         2014: 2,494,435 or 2,494.4 million or 2.5 billion
 
     CF:
-      op:
+      op-cf:
         2015: 1,469,502 or 1,469.5 million or 1.5 billion
         2014: 1,287,482 or 1,287.5 million or 1.3 billion
         2013: 1,151,686 or 1,151.6 million or 1.2 billion
@@ -122,7 +123,7 @@ ground-truths:
         2016: 5,272,411 or 5,272.4 million or 5.3 billion  # unreliable
 
     CF:
-      op:
+      op-cf:
         2017: 2,912,853 or 2,912.9 million or 2.9 billion  # unreliable
         2016: 2,199,728 or 2,199.7 million or 2.2 billion  # unreliable
         2013: 1,469,502 or 1,469.5 million or 1.5 billion  # unreliable
@@ -130,7 +131,7 @@ ground-truths:
 
   ADOBE_2022_10K:
     CF:
-      op:
+      op-cf:
         2022: 7,838 million  # unreliable
         2021: 7,230 million  # unreliable
         2020: 5,727 million  # unreliable
@@ -155,6 +156,19 @@ ground-truths:
         2022: 4,756 million
         2021: 4,822 million
         2020: 5,260 million
+
+
+  AES_2022_10K:
+    BS:
+      invent:
+        2022: 1,055 million
+        2021: 604 million  # unreliable
+
+    P&L:
+      cogs:
+        2022: 10,069 million  # unreliable
+        2021: 8,430 million  # unreliable
+        2020: 6,967 million  # unreliable
 
 
   PAYPAL_2022_10K:
