--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -164,11 +164,20 @@ ground-truths:
         2022: 1,055 million
         2021: 604 million  # unreliable
 
+      total-assets:
+        2022: 38,363 million
+        2021: 32,963 million
+
     P&L:
       cogs:
         2022: 10,069 million  # unreliable
         2021: 8,430 million  # unreliable
         2020: 6,967 million  # unreliable
+
+      net:
+        2022: negative (loss) 546 million
+        2021: negative (loss) 409 million
+        2020: 46 million
 
 
   PAYPAL_2022_10K:
