--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -270,6 +270,20 @@ ground-truths:
         2021: 4,240 million
 
 
+  AMERICANWATERWORKS_2021_10K:
+    CF:
+      d&a:
+        2021: 636 million  # unreliable
+        2020: 604 million  # unreliable
+        2019: 582 million  # unreliable
+
+    P&L:
+      op:
+        2021: 1,196 million
+        2020: 1,248 million
+        2019: 1,214 million
+
+
   PAYPAL_2022_10K:
     BS:
       curr-assets:
