--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -284,6 +284,17 @@ ground-truths:
         2019: 1,214 million
 
 
+  AMERICANWATERWORKS_2022_10K:
+    BS:
+      curr-assets:
+        2022: 1,250 million
+        2021: 1,554 million
+
+      curr-liabs:
+        2022: 2,811 million
+        2021: 2,141 million
+
+
   PAYPAL_2022_10K:
     BS:
       curr-assets:
