--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -357,6 +357,19 @@ ground-truths:
         2020: tax benefit of 2,535 million
 
 
+  COCACOLA_2017_10K:
+    BS:
+      total-assets:
+        2017: 36,545 million  # unreliable
+        2016: 34,010 million  # unreliable
+
+    P&L:
+      net:
+        2017: 1,248 million
+        2016: 6,527 million
+        2015: 7,351 million
+
+
   PAYPAL_2022_10K:
     BS:
       curr-assets:
