--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -416,6 +416,19 @@ ground-truths:
         2018: 6,829 million  # unreliable
 
 
+  CORNING_2021_10K:
+    P&L:
+      rev:
+        2021: 14,082 million  # unreliable
+        2020: 11,303 million
+        2019: 11,503 million
+
+      op:
+        2021: 2,112 million
+        2020: 509 million
+        2019: 1,306 million
+
+
   PAYPAL_2022_10K:
     BS:
       curr-assets:
